Dockerized Service for WinPred

--- a/ipl_infer/Pipfile
+++ b/ipl_infer/Pipfile
@@ -7,9 +7,12 @@ name = "pypi"
 pandas = "==2.2.3"
 scikit-learn = "==1.5.2"
 category-encoders = "==2.6.4"
+flask = "==3.0.3"
+gunicorn = "==23.0.0"
 
 [dev-packages]
 black = "*"
+requests = "*"
 
 [requires]
 python_version = "3.11"
