Streamlit and other updates

--- a/ipl_infer/Pipfile
+++ b/ipl_infer/Pipfile
@@ -10,6 +10,8 @@ category-encoders = "==2.6.4"
 flask = "==3.0.3"
 gunicorn = "==23.0.0"
 requests = "*"
+streamlit = "*"
+matplotlib = "*"
 
 [dev-packages]
 black = "*"
