update: Flink streamlit apps

--- a/ipl_infer/Pipfile
+++ b/ipl_infer/Pipfile
@@ -11,6 +11,10 @@ flask = "==3.0.3"
 gunicorn = "==23.0.0"
 requests = "*"
 streamlit = "*"
+kafka-python = "*"
+streamlit-autorefresh = "*"
+redis = "*"
+plotly = "*"
 matplotlib = "*"
 
 [dev-packages]
